# stm32-oop

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  self_down.md
.claude/: settings.json
cmake/: toolchain-arm-none-eabi.cmake
docs/: PROJECT_REVIEW.md  architecture.md  cli-flow.md  freertos-tasks.md  io-map.md  ota-flow.md  sensor-oop.md
lib/cmsis/: core_cm3.h
lib/cmsis_rtos/: cmsis_os2.c  cmsis_os2.h  cmsis_os2_wrapper.h
lib/stm32f1/: stm32f103xb.h
lib/stm32f1_hal/Inc/: stm32f1_compat.h  stm32f1xx_hal_conf.h
lib/stm32f1_hal_compat/: stm32f1xx_hal_compat.h
linker/: stm32f103c8.ld  stm32f103c8_app.ld  stm32f103c8_bootloader.ld
scripts/: debug_flow.sh  flash.sh  gdb.sh  run_tests.sh  serial_monitor.sh
src/app/bare_cli/: main.c
src/app/blinky/: breathing.c  main.c
src/app/cli_minimal/: main.c
src/app/ds18b20_freertos/: main.c
src/app/ds18b20_reader/: main.c
src/app/freertos_demo/: FreeRTOSConfig.h  freertos_hooks.c  freertos_scheduler.c  freertos_scheduler.h  main.c
src/app/freertos_test/: main.c
src/app/oled_test/: main.c
src/app/ota_demo/: main.c
src/app/uart_echo/: main.c
src/app/uart_test/: main.c
src/app/uart_test_raw/: main.c
src/bootloader/: main.c
src/cli/: cli.c  cli.h
src/core/: list.c  list.h  object.c  object.h  ring_buffer.c  ring_buffer.h  state_machine.c  state_machine.h
src/display/: font16x16.c  font6x8.c  font8x16.c  oled.h  oled_data.h  ssd1306.c  ssd1306.h
src/hal/: adc.c  adc.h  gpio.c  gpio.h  i2c.c  i2c.h  iwdg.c  iwdg.h  nvic.c  nvic.h  rcc.c  rcc.h  spi.c  spi.h  timer.c  timer.h  uart.c  uart.h
src/ota/: hmac_sha256.h  ota_client.c  ota_client.h  ota_config.h  ota_flash.c  ota_flash.h  ota_protocol.c  ota_protocol.h  ota_transport.h  ota_transport_shared.c  ota_transport_shared.h  ota_transport_uart.c  ota_transport_uart.h
src/sensor/: bmp280.c  bmp280.h  dht11.c  dht11.h  ds18b20.c  ds18b20.h  light_sensor.c  light_sensor.h  onewire.c  onewire.h  sensor.h
src/startup/: startup_stm32f103c8.s  system_stm32f1.c  system_stm32f1xx.c
src/storage/: spi_flash.c  spi_flash.h
src/utils/: assert.c  assert.h  crc32.c  crc32.h  delay.c  delay.h  dwt_delay.h  log.c  log.h
test/: CMakeLists.txt  test_assert.c  test_cli.c  test_crc32.c  test_gpio.c  test_iwdg.c  test_list.c  test_ota_protocol.c  test_ring_buffer.c  test_spi_flash.c  test_ssd1306.c  test_state_machine.c  test_timer.c  test_uart.c
test/mocks/: core_cm3.h  mock_gpio.c  mock_gpio.h  mock_iwdg.c  mock_iwdg.h  mock_spi.c  mock_spi.h  mock_timer.c  mock_timer.h  mock_uart.c  mock_uart.h  stm32f103xb.h  stm32f103xb_host.h  stm32f1xx_hal.h
test/unity/: unity.c  unity.h
tests/peripheral/: test_button.c  test_ds18b20.c  test_led.c  test_oled.c  test_spi_flash.c  test_uart_echo.c
tools/: ota_sender.py  sign.py
